[tool.poetry]
name = "streamlit-abc-notation"
version = "0.1.0"
description = "ABC notation renderer for streamlit"
authors = ["Jorge <jsequeira03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
packaging = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
